# SQLAgent

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
dashboard/: app.py  app_v2.py
notebooks/: analysis.ipynb  datasets.ipynb  test.ipynb
scripts/: run_confidence.sh  run_evaluate.sh  run_main.sh
scripts/experiments/: cot.sh  cot_metric_only.sh  python_react.sh  python_react_metric_only.sh  run_evaluate_legacy.sh  sql_react.sh  sql_react_metric_only.sh  sql_react_test.sh
src/: context.py  evaluate.py  main.py  post_evaluate.py
src/agent/: base.py  exceptions.py  factory.py  react.py
src/chat/: base.py  factory.py  openai.py
src/confidence/: base.py
src/database/: connector.py
src/evaluation/: base.py  config.py  judge.py
src/memory/: base.py
src/prompts/: base.py  baseline_mimic.yaml  baseline_mimic_description_v1.yaml  baseline_mimic_verifier.yaml  baseline_mimic_verifier_time_desc.yaml  baseline_no_description.yaml  mimic_metadata.yaml  react.yaml  react_v2.yaml  react_v3.yaml  sql_agent.yaml
src/prompts/legacy/: react.yaml  react_db.yaml  react_v3.yaml
src/tool/: base.py
src/utils/: load.py  logger.py  sql.py  verifier.py
tests/: test_judge.py
tests/utils/: test_sql.py
