[tool.poetry]
name = "sql-r1"
version = "0.1.0"
description = ""
authors = ["FacerAin <ywsong.dev@kakao.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
smolagents = "^1.12.0"
python-dotenv = "^1.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
