[tool.poetry]
name = "sql-r1"
version = "0.1.0"
description = ""
authors = ["FacerAin <ywsong.dev@kakao.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
smolagents = "^1.12.0"
python-dotenv = "^1.1.0"
black = {extras = ["jupyter"], version = "^25.1.0"}
isort = "^6.0.1"
mypy = "^1.15.0"
flake8 = "^7.2.0"
pre-commit = "^4.2.0"
pandas-stubs = "^2.2.3.250308"
openai = "^1.70.0"
colorlog = "^6.9.0"
sqlparse = "^0.5.3"
sqlglot = "^26.12.1"
matplotlib = "^3.10.1"
pyyaml = "^6.0.2"
seaborn = "^0.13.2"
networkx = "^3.4.2"
streamlit = "^1.44.1"
plotly = "^6.0.1"
anthropic = "^0.49.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
strict_optional = false


[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
